--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,36 +1,37 @@
+@Article{Vandermeer2022,
+AUTHOR = {{Van der Meer}, Lucas and Sudmanns, Martin and Augustin, Hannah and Baraldi, Andrea and Tiede, Dirk},
+TITLE = {Semantic querying in Earth observation data cubes},
+JOURNAL = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+VOLUME = {XLVIII-4/W1-2022},
+YEAR = {2022},
+PAGES = {503--510},
+URL = {https://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XLVIII-4-W1-2022/503/2022/},
+DOI = {10.5194/isprs-archives-XLVIII-4-W1-2022-503-2022}
+}
+
+
+@Article{rs13234807,
+AUTHOR = {Sudmanns, Martin and Augustin, Hannah and {Van der Meer}, Lucas and Baraldi, Andrea and Tiede, Dirk},
+TITLE = {The Austrian Semantic EO Data Cube Infrastructure},
+JOURNAL = {Remote Sensing},
+VOLUME = {13},
+YEAR = {2021},
+NUMBER = {23},
+ARTICLE-NUMBER = {4807},
+URL = {https://www.mdpi.com/2072-4292/13/23/4807},
+ISSN = {2072-4292},
+DOI = {10.3390/rs13234807}
+}
+
 @article{Abad2018,
-    author = {Abad, Lorena and {Van der Meer}, Lucas},
-    doi = {10.3390/info9110287},
-    issn = {2078-2489},
-    journal = {Information},
-    number = {11},
-    pages = {14},
-    title = {{Quantifying Bicycle Network Connectivity in Lisbon Using Open Data}},
-    url = {http://www.mdpi.com/2078-2489/9/11/287},
-    volume = {9},
-    year = {2018}
-}
-
-@article{Geopython2020,
-    title = {A semantic querying system for Earth observation imagery},
-    author = {{Van der Meer}, Lucas},
-    year = {2020},
-    journal = {Presentation at the GeoPython Conference, September 21-22 2020},
-    URL = {https://submit.geopython.net/ml2020/talk/ZMZTR3/}
-}
-
-@article{User2021,
-    title = {Tidy Geospatial Networks in R},
-    author = {{Van der Meer}, Lucas and Abad, Lorena and Gilardi, Andrea and Lovelace, Robin},
-    year = {2021},
-    journal = {Accepted talk for the UseR! Conference, July 5-9 2021},
-    URL = {https://user2021.r-project.org/}
-}
-
-@article{Sudmanns2021,
-    author = {Sudmanns, Martin and Augustin, Hannah and {Van der Meer}, Lucas and Werner, Christian and Tiede, Dirk},
-    title = {{One GUI to rule them all: Accessing multiple semantic EO data cubes in one graphical user interface}},
-    year = {2021},
-    journal = {Accepted paper for the 12th International Symposium on Digital Earth, July 6-8 2021},
-    URL = {https://digitalearth2021.org/}
+AUTHOR = {Abad, Lorena and {Van der Meer}, Lucas},
+DOI = {10.3390/info9110287},
+ISSN = {2078-2489},
+JOURNAL = {Information},
+NUMBER = {11},
+PAGES = {14},
+TITLE = {{Quantifying Bicycle Network Connectivity in Lisbon Using Open Data}},
+URL = {http://www.mdpi.com/2078-2489/9/11/287},
+VOLUMNE = {9},
+YEAR = {2018}
 }
